[workspace]
exclude = [
	"precompile/metadata",
]
members = [
	"core/*",
	"node",
	"pallet/*",
	"pallet/*/traits",
	"precompile/*",
	"runtime/*",
]
resolver = "2"

[workspace.package]
authors    = ["Darwinia Network <hello@darwinia.network>"]
edition    = "2021"
homepage   = "https://darwinia.network"
license    = "GPL-3.0"
repository = "https://github.com/darwinia-network/darwinia"
version    = "6.6.4"

[workspace.dependencies]
# crates.io
array-bytes  = { version = "6.2" }
codec        = { package = "parity-scale-codec", version = "3.6", default-features = false }
ethabi       = { version = "18.0", default-features = false }
ethereum     = { version = "0.15", default-features = false, features = ["with-codec"] }
libsecp256k1 = { version = "0.7", default-features = false }
log          = { version = "0.4" }
scale-info   = { version = "2.10", default-features = false }
sha3         = { version = "0.10" }
strum        = { version = "0.26", default-features = false }

# darwinia
crab-runtime                      = { path = "runtime/crab" }
darwinia-account-migration        = { path = "pallet/account-migration", default-features = false }
darwinia-asset-limit              = { path = "pallet/asset-limit", default-features = false }
darwinia-common-runtime           = { path = "runtime/common", default-features = false }
darwinia-deposit                  = { path = "pallet/deposit", default-features = false }
darwinia-ethtx-forwarder          = { path = "pallet/ethtx-forwarder", default-features = false }
darwinia-precompile-assets        = { path = "precompile/assets", default-features = false }
darwinia-precompile-deposit       = { path = "precompile/deposit", default-features = false }
darwinia-precompile-staking       = { path = "precompile/staking", default-features = false }
darwinia-precompile-state-storage = { path = "precompile/state-storage", default-features = false }
darwinia-runtime                  = { path = "runtime/darwinia" }
darwinia-staking                  = { path = "pallet/staking", default-features = false }
darwinia-staking-traits           = { path = "pallet/staking/traits", default-features = false }
dc-inflation                      = { path = "core/inflation", default-features = false }
dc-primitives                     = { path = "core/primitives", default-features = false }
dc-types                          = { path = "core/types" }
koi-runtime                       = { path = "runtime/koi" }

# frontier
fc-api                         = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2" }
fc-consensus                   = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2" }
fc-db                          = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2" }
fc-mapping-sync                = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", features = ["sql"] }
fc-rpc                         = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", features = ["rpc-binary-search-estimate", "txpool"] }
fc-rpc-core                    = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2" }
fc-storage                     = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2" }
fp-account                     = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", default-features = false, features = ["serde"] }
fp-ethereum                    = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", default-features = false }
fp-evm                         = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", default-features = false }
fp-rpc                         = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", default-features = false }
fp-self-contained              = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", default-features = false, features = ["serde"] }
pallet-ethereum                = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", default-features = false, features = ["forbid-evm-reentrancy"] }
pallet-evm                     = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", default-features = false, features = ["forbid-evm-reentrancy"] }
pallet-evm-precompile-blake2   = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", default-features = false }
pallet-evm-precompile-bls12381 = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", default-features = false }
pallet-evm-precompile-bn128    = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", default-features = false }
pallet-evm-precompile-modexp   = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", default-features = false }
pallet-evm-precompile-simple   = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", default-features = false }
precompile-utils               = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v1.7.2", default-features = false }

# moonbeam
moonbeam-evm-tracer                     = { git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v1.7.2", default-features = false }
moonbeam-primitives-ext                 = { git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v1.7.2", default-features = false }
moonbeam-rpc-debug                      = { git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v1.7.2" }
moonbeam-rpc-primitives-debug           = { git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v1.7.2", default-features = false }
moonbeam-rpc-trace                      = { git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v1.7.2" }
pallet-asset-manager                    = { git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v1.7.2", default-features = false }
pallet-evm-precompile-conviction-voting = { git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v1.7.2", default-features = false }
xcm-primitives                          = { git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v1.7.2", default-features = false }

# open-web3-stack
orml-xcm-support = { git = "https://github.com/darwinia-network/open-runtime-module-library", branch = "polkadot-v1.7.2", default-features = false }
orml-xtokens     = { git = "https://github.com/darwinia-network/open-runtime-module-library", branch = "polkadot-v1.7.2", default-features = false }

# polkadot-sdk
cumulus-client-cli                         = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
cumulus-client-collator                    = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
cumulus-client-consensus-aura              = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
cumulus-client-consensus-common            = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
cumulus-client-consensus-proposer          = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
cumulus-client-parachain-inherent          = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
cumulus-client-service                     = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
cumulus-pallet-aura-ext                    = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
cumulus-pallet-dmp-queue                   = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
cumulus-pallet-parachain-system            = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false, features = ["parameterized-consensus-hook"] }
cumulus-pallet-session-benchmarking        = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
cumulus-pallet-xcm                         = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
cumulus-pallet-xcmp-queue                  = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
cumulus-primitives-aura                    = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
cumulus-primitives-core                    = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
cumulus-primitives-parachain-inherent      = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
cumulus-primitives-utility                 = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
cumulus-relay-chain-interface              = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
frame-benchmarking                         = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
frame-benchmarking-cli                     = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
frame-executive                            = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
frame-support                              = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
frame-system                               = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
frame-system-benchmarking                  = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
frame-system-rpc-runtime-api               = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
frame-try-runtime                          = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-assets                              = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-aura                                = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false, features = ["experimental"] }
pallet-authorship                          = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-balances                            = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false, features = ["insecure_zero_ed"] }
pallet-collective                          = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-conviction-voting                   = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-message-queue                       = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-preimage                            = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-proxy                               = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-referenda                           = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-scheduler                           = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-session                             = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-sudo                                = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-timestamp                           = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-transaction-payment                 = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-transaction-payment-rpc             = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-treasury                            = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-tx-pause                            = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-utility                             = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-whitelist                           = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
pallet-xcm                                 = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
parachain-info                             = { package = "staging-parachain-info", git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
polkadot-cli                               = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
polkadot-parachain                         = { package = "polkadot-parachain-primitives", git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
polkadot-primitives                        = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
polkadot-runtime-common                    = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sc-basic-authorship                        = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-chain-spec                              = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-cli                                     = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-client-api                              = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-consensus                               = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-consensus-aura                          = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-executor                                = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-keystore                                = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-network                                 = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-network-sync                            = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-offchain                                = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-rpc                                     = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-rpc-api                                 = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-service                                 = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-storage-monitor                         = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-sysinfo                                 = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-telemetry                               = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-tracing                                 = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-transaction-pool                        = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sc-transaction-pool-api                    = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sp-api                                     = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-arithmetic                              = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-block-builder                           = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-blockchain                              = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sp-consensus-aura                          = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-core                                    = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-debug-derive                            = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-genesis-builder                         = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-inherents                               = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-io                                      = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-keyring                                 = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-keystore                                = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
sp-offchain                                = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-runtime                                 = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-session                                 = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-staking                                 = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-std                                     = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-timestamp                               = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-transaction-pool                        = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
sp-version                                 = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
substrate-build-script-utils               = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
substrate-frame-rpc-system                 = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
substrate-prometheus-endpoint              = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
substrate-test-utils                       = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
substrate-wasm-builder                     = { git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2" }
xcm                                        = { package = "staging-xcm", git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
xcm-builder                                = { package = "staging-xcm-builder", git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }
xcm-executor                               = { package = "staging-xcm-executor", git = "https://github.com/darwinia-network/polkadot-sdk", branch = "release-polkadot-v1.7.2", default-features = false }

[profile.release]
panic = "unwind"

[profile.dev.package]
blake2                 = { opt-level = 3 }
blake2b_simd           = { opt-level = 3 }
chacha20poly1305       = { opt-level = 3 }
cranelift-codegen      = { opt-level = 3 }
cranelift-wasm         = { opt-level = 3 }
crc32fast              = { opt-level = 3 }
crossbeam-deque        = { opt-level = 3 }
crypto-mac             = { opt-level = 3 }
curve25519-dalek       = { opt-level = 3 }
ed25519-dalek          = { opt-level = 3 }
flate2                 = { opt-level = 3 }
futures                = { opt-level = 3 }
futures-channel        = { opt-level = 3 }
futures-core           = { opt-level = 3 }
futures-executor       = { opt-level = 3 }
futures-intrusive      = { opt-level = 3 }
futures-io             = { opt-level = 3 }
futures-lite           = { opt-level = 3 }
futures-rustls         = { opt-level = 3 }
futures-sink           = { opt-level = 3 }
futures-task           = { opt-level = 3 }
futures-timer          = { opt-level = 3 }
futures-util           = { opt-level = 3 }
hash-db                = { opt-level = 3 }
hashbrown              = { opt-level = 3 }
hmac                   = { opt-level = 3 }
httparse               = { opt-level = 3 }
integer-sqrt           = { opt-level = 3 }
keccak                 = { opt-level = 3 }
librocksdb-sys         = { opt-level = 3 }
libsecp256k1           = { opt-level = 3 }
libz-sys               = { opt-level = 3 }
mio                    = { opt-level = 3 }
nalgebra               = { opt-level = 3 }
num-bigint             = { opt-level = 3 }
parking_lot            = { opt-level = 3 }
parking_lot_core       = { opt-level = 3 }
percent-encoding       = { opt-level = 3 }
primitive-types        = { opt-level = 3 }
reed-solomon-novelpoly = { opt-level = 3 }
ring                   = { opt-level = 3 }
rustls                 = { opt-level = 3 }
sha2                   = { opt-level = 3 }
sha3                   = { opt-level = 3 }
smallvec               = { opt-level = 3 }
snow                   = { opt-level = 3 }
substrate-bip39        = { opt-level = 3 }
tokio                  = { opt-level = 3 }
tokio-native-tls       = { opt-level = 3 }
tokio-rustls           = { opt-level = 3 }
tokio-socks            = { opt-level = 3 }
tokio-stream           = { opt-level = 3 }
tokio-util             = { opt-level = 3 }
twox-hash              = { opt-level = 3 }
uint                   = { opt-level = 3 }
x25519-dalek           = { opt-level = 3 }
yamux                  = { opt-level = 3 }
zeroize                = { opt-level = 3 }

[profile.ci-dev]
debug       = false
incremental = false
inherits    = "dev"
opt-level   = "z"

[profile.ci-release]
inherits = "release"
lto      = true
